--- a/index.html
+++ b/index.html
@@ -1,46 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Flatdango</title>
-  <link rel="stylesheet" href="./style.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"/>
+    <title>FLATDANGO</title>
 </head>
 <body>
-  <header>
-    <h1>Flatdango</h1>
-  </header>
-
-  <div class="container">
-    <section id="hero-section">
-      <div class="movie-details">
-        <h2 class="movie-title">Movie Title</h2>
-        <div class="movie-poster-container">
-          <img class="movie-poster" src="" alt="Movie Poster" />
-        </div>
-        <div class="movie-info">
-          <p class="info-label">Showtime:</p>
-          <p class="showtime">showtime</p>
-          <p class="info-label">Runtime:</p>
-          <p class="runtime">runtime</p>
-        </div>
-      </div>
-      <div class="movie-menu">
-        <h2>Movies</h2>
-        <ul class="films">
-          <li class="film-item">PlaceHolder li</li>
-        </ul>
-      </div>
-    </section>
-
-    <section id="movie-tickets">
-      <div class="ticket-counter"></div>
-      <div class="tickets-remaining">TICKETS REMAINING</div>
-      <button class="buy-ticket">Buy Tickets</button>
-    </section>
-  </div>
-
-  <script type="text/javascript" src="./index.js"></script>
+    <ul id="films"></ul>
+    <div id="card"></div>
+    <script src="index.js"></script>
 </body>
 </html>
